--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -130,7 +130,7 @@
     
     <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "item_image" do %>
+        <%= link_to item_path(item.id),method: :get do %>
         
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
@@ -140,6 +140,7 @@
             <%# <span>Sold Out!!</span>  %>
           </div>
           <%# //商品が売れていればsold outの表示 %>
+       
         
         </div>
         <div class='item-info'>
@@ -163,7 +164,7 @@
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
-        <%= link_to '#' do %>
+        <%= link_to "#" do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
         <div class='item-info'>
           <h3 class='item-name'>
