--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -48,7 +48,7 @@
           <td class="detail-value"><%= @item.user.nickname%></td>
         </tr>
         <tr>
-          <th class="detail-item">カテゴリー</th>
+          <th class="detail-item">カテゴリー名</th>
           <td class="detail-value"><%= @item.category.name %></td>
         </tr>
         <tr>
