--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -48,7 +48,7 @@
           <td class="detail-value"><%= @item.user.nickname%></td>
         </tr>
         <tr>
-          <th class="detail-item">カテゴリー名</th>
+          <th class="detail-item">カテゴリー</th>
           <td class="detail-value"><%= @item.category.name %></td>
         </tr>
         <tr>
@@ -104,7 +104,7 @@
       後ろの商品 ＞
     </a>
   </div>
-  <a href="#" class='another-item'><%= "商品のカテゴリー名" %>をもっと見る</a>
+  <a href="#" class='another-item'><%= @item.category.name %>をもっと見る</a>
 </div>
 
 <%= render "shared/footer" %>
