--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,9 +136,12 @@
           <%= image_tag item.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outの表示 %>
+          <% if item.order != nil %>
           <div class='sold-out'>
-            <%# <span>Sold Out!!</span>  %>
+
+             <span>Sold Out!!</span>  
           </div>
+          <% end %>
           <%# //商品が売れていればsold outの表示 %>
        
         
@@ -163,6 +166,7 @@
 
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
+      <% if @items.count == 0 %>
       <li class='list'>
         <%= link_to "#" do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -180,6 +184,7 @@
         </div>
         <% end %>
       </li>
+      <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# //商品がない場合のダミー %>
     </ul>
